--- a/_pgbackup/index_1738543366.html
+++ b/_pgbackup/index_1738543366.html
@@ -65,18 +65,47 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-10 offset-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3 about__content__box first">
-                                <h5>Kate Cano</h5>
-                                <p>Over seven years in the creative industry, I’ve had the chance to work on a variety of projects, with companies and individuals. Branding, web design, UI/UX design and art direction. For work inquires send me an <a class="underline" href="mailto:kathleencelinecano@gmail.com">e-mail</a>.</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-10 offset-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3 about__content__box">
-                                <h5>Services</h5>
-                                <ul class="services">
-                                    <li>Concept &amp; Strategy</li>
-                                    <li>Art Direction</li>
-                                    <li>Web Design</li>
-                                    <li>UI &amp; UX Design</li>
+                                <h5>Kate Cano</h5> 
+                                <h3>Services Offered:</h3>
+                                <h3>1. Email Content Campaigns</h3>
+                                <p><strong>Platforms:</strong> Mailchimp, HubSpot, Canva</p>
+                                <p><strong>Capabilities:</strong></p>
+                                <ul>
+                                    <li>Content creation and design for engaging email campaigns.</li>
+                                    <li>Audience segmentation and targeted email automation.</li>
+                                    <li>Automated workflows for subscriber management and engagement.</li>
+                                </ul>
+                                <h3>2. Landing Page Development</h3>
+                                <p><strong>Platforms:</strong> Squarespace, GoDaddy Website Builder, Elementor, etc.</p>
+                                <p><strong>Capabilities:</strong></p>
+                                <ul>
+                                    <li>End-to-end landing page development, including UI/UX design.</li>
+                                    <li>Crafting compelling marketing content for higher conversion rates.</li>
+                                    <li>Integration with marketing tools and analytics.</li>
+                                </ul>
+                                <h3>3. Video Editing</h3>
+                                <p><strong>Focus:</strong> Reels and Stories</p>
+                                <p><strong>Capabilities:</strong></p>
+                                <ul>
+                                    <li>Professional video editing tailored for social media.</li>
+                                    <li>Creative storytelling and engaging visual content.</li>
+                                </ul>
+                                <h3>4. Content Calendar Management</h3>
+                                <p><strong>Platform:</strong> Sprout Social</p>
+                                <p><strong>Capabilities:</strong></p>
+                                <ul>
+                                    <li>Creating and managing content calendars.</li>
+                                    <li>Scheduling and uploading content across social media platforms.</li>
+                                </ul>
+                                <h3>5. Adobe Creative Suite Skills</h3>
+                                <p><strong>Capabilities:</strong></p>
+                                <ul>
+                                    <li>Ideation and creation of design development for UI/UX mockups.</li>
+                                    <li>Execution of concepts served to clients.</li>
+                                    <li>Creation of web banner ads (HTML5 ads).</li>
+                                    <li>Design and production of print materials (flyers, business cards, magazine layouts, whitepapers, reports).</li>
+                                    <li>Adherence to brand guidelines in design.</li>
+                                    <li>Creation of infographics, logos, newsletters, and landing pages.</li>
                                 </ul>
                             </div>
                         </div>
@@ -406,35 +435,31 @@
                                         <div class="project-info">
                                             <p>Promo<br/><span>print</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/sRERpB6.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/print-booking/print-booking-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show logos">
-                                <a href="#!projects/logos-talent-management" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show print"><a href="#!projects/print-cocktail" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Talent Management<br/><span>logos</span></p>
+                                            <p>Menu<br/><span>print</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/6WOnRZ0.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/print-cocktail/print-cocktail-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show logos">
-                                <a href="#!projects/logos-talent-management" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show print"><a href="#!projects/print-gdream" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Training and Development<br/><span>logos</span></p>
+                                            <p>Promotional<br/><span>print</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/QJWMfXB.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/print-gdream/print-gdream-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show newsletter">
-                                <a href="#!projects/newsletter-bodog-casino" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show print"><a href="#!projects/print-klang" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Bodog Casino<br/><span>newsletter</span></p>
+                                            <p>Promo<br/><span>print</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/WT0yEDz.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/print-klang/print-klang-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show newsletter">
-                                <a href="#!projects/newsletter-bodog-sport" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show print"><a href="#!projects/print-newyork" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Bodog Sport<br/><span>newsletter</span></p>
+                                            <p>Annual Report<br/><span>print</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/UVU8X8e.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/print-newyork/print-newyork-0.jpg" alt="thumbnail"/> </a>
                             </div>
                             <div class="col-12 col-md-4 project show newsletter">
                                 <a href="#!projects/newsletter-caspio" class="thumbnail"> <div class="overlay">
