--- a/projects/print-palace/_pgbackup/index_1738543426.html
+++ b/projects/print-palace/_pgbackup/index_1738543426.html
@@ -51,12 +51,12 @@
                 <p><small>kate</small></p>
             </div>
         </header>
-        <section id="ajaxpage" class="ajaxpage"><a href="print-seaprint-sea-full.jpg" target="_blank"><img border="0" src="print-seaprint-sea.jpg"/></a>
+        <section id="ajaxpage" class="ajaxpage">
+            <a href="The-Palace.pdf" target="_blank"><img border="0" src="print-palace-1.jpg"/></a>
             <div class="ajaxpage__content col-10 offset-1 col-md-8 offset-md-2 col-lg-10 offset-lg-1">
                 <ul class="ajaxpage__content--meta">
                     <li>
-                        <h4>Resorts World Cruises Promotional Flyer</h4>
-                        <small>Print</small>
+                        <h4>Resorts World Cruises Promotional Flyer</h4><small>Print</small>
                     </li>
                     <li>
                         <p>Flyer</p>
@@ -68,13 +68,14 @@
                 </ul>
                 <div class="ajaxpage__content--description">
                     <h3>Art Direction:</h3>
-                    <p><strong>Objective:</strong> The goal is to create a visually appealing and engaging flyer that captures the essence of a luxurious cruise experience and highlights the exclusive offers and packages available.</p>
-                    <p><strong>Color Scheme:</strong> The primary colors used are white, grey, and pink. The pink color for headings and accents adds vibrancy and draws attention to key elements, while the white and grey background maintains a clean and sophisticated look. These colors are tactically chosen to evoke feelings of relaxation, enjoyment, and exclusivity.</p>
-                    <p><strong>Typography:</strong> The typography is chosen for clarity and readability. Headings are in a larger, bold pink font to stand out, while the body text is in a smaller, softer shade of grey. This combination ensures that the information is easily digestible and visually appealing, strategically guiding the viewer's attention to important details.</p>
-                    <p><strong>Imagery:</strong> High-quality images of the cruise ship and scenic destinations are used to visually entice potential travelers. The images are centered and bordered with a subtle drop shadow to make them stand out without overwhelming the text. The selection of imagery is deliberate to convey the luxurious and picturesque experience of the cruise.</p>
-                    <p><strong>Layout:</strong> The layout is designed to be organized and structured, with clear sections for different types of information. Ample white space is used to prevent clutter and enhance readability. Center alignment of the title and image container helps maintain a balanced and harmonious look. The layout is tactically planned to ensure a seamless flow of information.</p>
-                    <p><strong>Visual Hierarchy:</strong> A clear visual hierarchy is established through the use of font sizes, colors, and spacing. This ensures that the reader's attention is drawn to the most important elements first, such as the cruise packages, special offers, and key descriptions. Strategic use of bold text for headings further guides the reader through the content in a logical and engaging manner, making it easy for them to identify and focus on the main selling points.</p>
-                    <p><strong>Outcome:</strong> The art direction successfully creates an inviting and sophisticated presentation that mirrors the luxurious experience of a Resorts World cruise. The clean and modern design, combined with carefully selected typography, colors, and imagery, makes the flyer not only informative but also visually appealing. The tactical approach ensures that the key messages are effectively communicated, encouraging potential customers to explore the cruise packages and consider booking their next vacation with Resorts World Cruises.</p>
+                    <p><strong>Luxury and Elegance:</strong> The design emphasizes luxury and elegance, aligning with the high-end nature of The Palace Suites. The use of serif fonts provides a classic and sophisticated look, suitable for promoting premium accommodations.</p>
+                    <p><strong>Color Scheme:</strong> The primary colors used are white, grey, and gold. The gold accents add a touch of opulence and sophistication, while the white and grey background ensures a clean and crisp look. These colors are often associated with luxury and exclusivity.</p>
+                    <p><strong>Typography:</strong> The typography is chosen for clarity and elegance. Headings are in a larger, bold gold font to stand out, while the body text is in a smaller, subtle shade of grey. This combination ensures that the information is easily digestible and visually appealing.</p>
+                    <p><strong>Layout:</strong> The layout is designed to be organized and structured, with clear sections for different types of information. Ample white space is used to prevent clutter and enhance readability. Center alignment of the title and image container helps maintain a balanced and harmonious look.</p>
+                    <p><strong>Imagery:</strong> High-quality images of the suites and amenities are used to visually represent the luxurious experience offered. The images are centered and bordered with a subtle drop shadow to make them stand out without overwhelming the text.</p>
+                    <p><strong>Visual Hierarchy:</strong> A clear visual hierarchy is established through the use of font sizes, colors, and spacing. This ensures that the reader's attention is drawn to the most important elements first, such as the suite options and key features. Strategic use of bold text for headings further guides the reader through the content in a logical and engaging manner.</p>
+                    <p><strong>Infographics and Icons:</strong> Infographics and icons are used to present information about the suite features and amenities in a visually engaging way. This not only makes the content more accessible but also helps in conveying the luxurious aspects efficiently.</p>
+                    <p><strong>Outcome:</strong> The art direction successfully creates an inviting and sophisticated presentation that mirrors the luxurious experience of staying at The Palace Suites. The clean and elegant design, combined with carefully selected typography, colors, and imagery, makes the flyer not only informative but also visually appealing, encouraging potential guests to explore the suite options and consider booking their stay at The Palace Suites.</p>
                 </div>
             </div>
         </section>
