--- a/projects/print-report/index.html
+++ b/projects/print-report/index.html
@@ -51,12 +51,12 @@
                 <p><small>kate</small></p>
             </div>
         </header>
-        <section id="ajaxpage" class="ajaxpage"><a href="caspio-full.pdf" target="_blank"><img border="0" src="print-report-caspio-1.jpg"/></a>
+        <section id="ajaxpage" class="ajaxpage">
+            <a href="projects/print-report/caspio-full.pdf" target="_blank"><img border="0" src="projects/print-report/print-report-caspio-1.jpg"/></a>
             <div class="ajaxpage__content col-10 offset-1 col-md-8 offset-md-2 col-lg-10 offset-lg-1">
                 <ul class="ajaxpage__content--meta">
                     <li>
-                        <h4>Case Study Layout</h4>
-                        <small>Print</small>
+                        <h4>Case Study Layout</h4><small>Print</small>
                     </li>
                     <li>
                         <p>Whitepaper</p>
