--- a/projects/print-sime/_pgbackup/index_1738543783.html
+++ b/projects/print-sime/_pgbackup/index_1738543783.html
@@ -51,15 +51,15 @@
                 <p><small>kate</small></p>
             </div>
         </header>
-        <section id="ajaxpage" class="ajaxpage">
-            <a href="Stories%20-%20Whoop%20App%20folder%201080x1920.mp4" target="_blank"><iframe width="100%" height="600px" src="" rojects videos-100 Stories%20-%20Whoop%20App%20folder%201080x1920.mp4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen"></iframe></a>
+        <section id="ajaxpage" class="ajaxpage"><a href="print-sime-full.pdf" target="_blank"><img border="0" src="print-sime.jpg"/></a>
             <div class="ajaxpage__content col-10 offset-1 col-md-8 offset-md-2 col-lg-10 offset-lg-1">
                 <ul class="ajaxpage__content--meta">
                     <li>
-                        <h4>Whoop App</h4>
-                        <h4></h4><small>Video</small>
+                        <h4>Quick Lane Brochure</h4>
+                        <small>Print</small>
                     </li>
                     <li>
+                        <p>Brochure</p>
                         <p></p>
                     </li>
                     <li>
@@ -68,53 +68,66 @@
                 </ul>
                 <div class="ajaxpage__content--description">
                     <h3>Objective</h3>
-                    <p>To create a visually engaging and informative video for the WHOOP App, emphasizing its capacity measurement features and encouraging users to track their fitness and health.</p>
+                    <p>To create a cohesive and visually appealing set of brochures for Quick Lane, showcasing their services, benefits, and customer engagement initiatives. The design aims to enhance brand recognition and convey a sense of professionalism and reliability.</p>
                     <h3>Color Scheme</h3>
                     <ul>
-                        <li><strong>Primary Colors:</strong> Black and white. The black color conveys a sense of sophistication and strength, while the white background ensures a clean and crisp look.
+                        <li>
+                            <strong>Primary Colors:</strong> Blue and white. The blue color is associated with trust, reliability, and professionalism, while the white background ensures a clean and crisp look.
                         </li>
-                        <li><strong>Accent Colors:</strong> Elite gold accents to add a touch of luxury and excellence, complementing the primary color scheme.
+                        <li>
+                            <strong>Accent Colors:</strong> Subtle use of grey and other complementary colors to add visual interest without overwhelming the primary color scheme.
                         </li>
                     </ul>
                     <h3>Typography</h3>
                     <ul>
-                        <li><strong>Headings:</strong> Bold and large font size in black to make them stand out and grab attention. A sporty and sharp sans-serif font to ensure a modern and dynamic appearance.
+                        <li>
+                            <strong>Headings:</strong> Bold and large font size in blue to make them stand out and grab attention. A sans-serif font like 'Helvetica Neue' ensures a modern and clean appearance.
                         </li>
-                        <li><strong>Body Text:</strong> Smaller font size in grey for readability and to maintain a professional look. Consistent use of sporty and sharp sans-serif fonts ensures uniformity and clarity.
+                        <li>
+                            <strong>Body Text:</strong> Smaller font size in grey for readability and to maintain a professional look. Consistent use of sans-serif fonts ensures uniformity and clarity.
                         </li>
                     </ul>
                     <h3>Layout</h3>
                     <ul>
-                        <li><strong>Consistent Structure:</strong> The video follows a consistent structure to maintain brand cohesion. Clear sections with headings, body text, and visuals ensure easy navigation.
+                        <li>
+                            <strong>Consistent Structure:</strong> Each brochure follows a consistent structure to maintain brand cohesion. Clear sections with headings, body text, and images ensure easy navigation.
                         </li>
-                        <li><strong>White Space:</strong> Ample use of white space to prevent clutter and enhance readability. This also helps in creating a clean and professional look.
+                        <li>
+                            <strong>White Space:</strong> Ample use of white space to prevent clutter and enhance readability. This also helps in creating a clean and professional look.
                         </li>
-                        <li><strong>Alignment:</strong> Center alignment for titles and key visuals to maintain balance and harmony. Left alignment for body text to ensure readability.
+                        <li>
+                            <strong>Alignment:</strong> Center alignment for titles and key images to maintain balance and harmony. Left alignment for body text to ensure readability.
                         </li>
                     </ul>
                     <h3>Imagery</h3>
                     <ul>
-                        <li><strong>High-Quality Visuals:</strong> Use of high-quality visuals of the app interface, athletes, and related icons to visually represent the app's features and benefits. Visuals are carefully selected to convey the reliability and professionalism of WHOOP.
+                        <li>
+                            <strong>High-Quality Images:</strong> Use of high-quality images of service centers, cars, and related icons to visually represent the services offered. Images are carefully selected to convey the reliability and professionalism of Quick Lane.
                         </li>
-                        <li><strong>Consistent Style:</strong> Visuals follow a consistent style and color tone to maintain uniformity across the video content.
+                        <li>
+                            <strong>Consistent Style:</strong> Images follow a consistent style and color tone to maintain uniformity across all brochures.
                         </li>
                     </ul>
                     <h3>Visual Hierarchy</h3>
                     <ul>
-                        <li><strong>Font Sizes and Colors:</strong> Use of different font sizes and colors to establish a clear visual hierarchy. Important information like headings and key points are highlighted using larger font sizes and bold colors.
+                        <li>
+                            <strong>Font Sizes and Colors:</strong> Use of different font sizes and colors to establish a clear visual hierarchy. Important information like headings and key points are highlighted using larger font sizes and bold colors.
                         </li>
-                        <li><strong>Bullet Points:</strong> Use of bullet points to list key features and benefits for easy readability and quick reference.
+                        <li>
+                            <strong>Bullet Points:</strong> Use of bullet points to list services and benefits for easy readability and quick reference.
                         </li>
                     </ul>
                     <h3>Branding</h3>
                     <ul>
-                        <li><strong>Logo Placement:</strong> Prominent placement of the WHOOP logo to reinforce brand identity and recognition.
+                        <li>
+                            <strong>Logo Placement:</strong> Prominent placement of the Quick Lane and Sime Darby Motors logos to reinforce brand identity.
                         </li>
-                        <li><strong>Taglines and Slogans:</strong> Inclusion of taglines and slogans to communicate the brand message effectively and engage the audience.
+                        <li>
+                            <strong>Taglines and Slogans:</strong> Inclusion of taglines and slogans to communicate the brand message effectively.
                         </li>
                     </ul>
                     <h3>Outcome</h3>
-                    <p>The art direction successfully creates a visually appealing and informative video that reflects the reliability and professionalism of the WHOOP App. The clean and modern design, combined with carefully selected typography, colors, and visuals, ensures that the video is not only informative but also visually engaging. This encourages potential users to engage with the content and consider using the WHOOP App to measure their capacity and track their fitness and health.</p>
+                    <p>The art direction successfully creates a cohesive and visually appealing set of brochures that reflect the professionalism and reliability of Quick Lane. The clean and modern design, combined with carefully selected typography, colors, and imagery, ensures that the brochures are not only informative but also visually engaging. This encourages potential customers to engage with the content and consider Quick Lane for their automotive service needs.</p>
                 </div>
             </div>
         </section>
