--- a/projects/print-sime/index.html
+++ b/projects/print-sime/index.html
@@ -51,12 +51,12 @@
                 <p><small>kate</small></p>
             </div>
         </header>
-        <section id="ajaxpage" class="ajaxpage"><a href="print-sime-full.pdf" target="_blank"><img border="0" src="print-sime.jpg"/></a>
+        <section id="ajaxpage" class="ajaxpage">
+            <a href="projects/print-sime/print-sime-full.pdf" target="_blank"><img border="0" src="projects/print-sime/print-sime.jpg"/></a>
             <div class="ajaxpage__content col-10 offset-1 col-md-8 offset-md-2 col-lg-10 offset-lg-1">
                 <ul class="ajaxpage__content--meta">
                     <li>
-                        <h4>Quick Lane Brochure</h4>
-                        <small>Print</small>
+                        <h4>Quick Lane Brochure</h4><small>Print</small>
                     </li>
                     <li>
                         <p>Brochure</p>
@@ -71,59 +71,46 @@
                     <p>To create a cohesive and visually appealing set of brochures for Quick Lane, showcasing their services, benefits, and customer engagement initiatives. The design aims to enhance brand recognition and convey a sense of professionalism and reliability.</p>
                     <h3>Color Scheme</h3>
                     <ul>
-                        <li>
-                            <strong>Primary Colors:</strong> Blue and white. The blue color is associated with trust, reliability, and professionalism, while the white background ensures a clean and crisp look.
+                        <li><strong>Primary Colors:</strong> Blue and white. The blue color is associated with trust, reliability, and professionalism, while the white background ensures a clean and crisp look.
                         </li>
-                        <li>
-                            <strong>Accent Colors:</strong> Subtle use of grey and other complementary colors to add visual interest without overwhelming the primary color scheme.
+                        <li><strong>Accent Colors:</strong> Subtle use of grey and other complementary colors to add visual interest without overwhelming the primary color scheme.
                         </li>
                     </ul>
                     <h3>Typography</h3>
                     <ul>
-                        <li>
-                            <strong>Headings:</strong> Bold and large font size in blue to make them stand out and grab attention. A sans-serif font like 'Helvetica Neue' ensures a modern and clean appearance.
+                        <li><strong>Headings:</strong> Bold and large font size in blue to make them stand out and grab attention. A sans-serif font like 'Helvetica Neue' ensures a modern and clean appearance.
                         </li>
-                        <li>
-                            <strong>Body Text:</strong> Smaller font size in grey for readability and to maintain a professional look. Consistent use of sans-serif fonts ensures uniformity and clarity.
+                        <li><strong>Body Text:</strong> Smaller font size in grey for readability and to maintain a professional look. Consistent use of sans-serif fonts ensures uniformity and clarity.
                         </li>
                     </ul>
                     <h3>Layout</h3>
                     <ul>
-                        <li>
-                            <strong>Consistent Structure:</strong> Each brochure follows a consistent structure to maintain brand cohesion. Clear sections with headings, body text, and images ensure easy navigation.
+                        <li><strong>Consistent Structure:</strong> Each brochure follows a consistent structure to maintain brand cohesion. Clear sections with headings, body text, and images ensure easy navigation.
                         </li>
-                        <li>
-                            <strong>White Space:</strong> Ample use of white space to prevent clutter and enhance readability. This also helps in creating a clean and professional look.
+                        <li><strong>White Space:</strong> Ample use of white space to prevent clutter and enhance readability. This also helps in creating a clean and professional look.
                         </li>
-                        <li>
-                            <strong>Alignment:</strong> Center alignment for titles and key images to maintain balance and harmony. Left alignment for body text to ensure readability.
+                        <li><strong>Alignment:</strong> Center alignment for titles and key images to maintain balance and harmony. Left alignment for body text to ensure readability.
                         </li>
                     </ul>
                     <h3>Imagery</h3>
                     <ul>
-                        <li>
-                            <strong>High-Quality Images:</strong> Use of high-quality images of service centers, cars, and related icons to visually represent the services offered. Images are carefully selected to convey the reliability and professionalism of Quick Lane.
+                        <li><strong>High-Quality Images:</strong> Use of high-quality images of service centers, cars, and related icons to visually represent the services offered. Images are carefully selected to convey the reliability and professionalism of Quick Lane.
                         </li>
-                        <li>
-                            <strong>Consistent Style:</strong> Images follow a consistent style and color tone to maintain uniformity across all brochures.
+                        <li><strong>Consistent Style:</strong> Images follow a consistent style and color tone to maintain uniformity across all brochures.
                         </li>
                     </ul>
                     <h3>Visual Hierarchy</h3>
                     <ul>
-                        <li>
-                            <strong>Font Sizes and Colors:</strong> Use of different font sizes and colors to establish a clear visual hierarchy. Important information like headings and key points are highlighted using larger font sizes and bold colors.
+                        <li><strong>Font Sizes and Colors:</strong> Use of different font sizes and colors to establish a clear visual hierarchy. Important information like headings and key points are highlighted using larger font sizes and bold colors.
                         </li>
-                        <li>
-                            <strong>Bullet Points:</strong> Use of bullet points to list services and benefits for easy readability and quick reference.
+                        <li><strong>Bullet Points:</strong> Use of bullet points to list services and benefits for easy readability and quick reference.
                         </li>
                     </ul>
                     <h3>Branding</h3>
                     <ul>
-                        <li>
-                            <strong>Logo Placement:</strong> Prominent placement of the Quick Lane and Sime Darby Motors logos to reinforce brand identity.
+                        <li><strong>Logo Placement:</strong> Prominent placement of the Quick Lane and Sime Darby Motors logos to reinforce brand identity.
                         </li>
-                        <li>
-                            <strong>Taglines and Slogans:</strong> Inclusion of taglines and slogans to communicate the brand message effectively.
+                        <li><strong>Taglines and Slogans:</strong> Inclusion of taglines and slogans to communicate the brand message effectively.
                         </li>
                     </ul>
                     <h3>Outcome</h3>
