--- a/projects/print-report/_pgbackup/index_1738543569.html
+++ b/projects/print-report/_pgbackup/index_1738543569.html
@@ -51,15 +51,15 @@
                 <p><small>kate</small></p>
             </div>
         </header>
-        <section id="ajaxpage" class="ajaxpage"><a href="print-seaprint-sea-full.jpg" target="_blank"><img border="0" src="print-seaprint-sea.jpg"/></a>
+        <section id="ajaxpage" class="ajaxpage"><a href="caspio-full.pdf" target="_blank"><img border="0" src="print-report-caspio-1.jpg"/></a>
             <div class="ajaxpage__content col-10 offset-1 col-md-8 offset-md-2 col-lg-10 offset-lg-1">
                 <ul class="ajaxpage__content--meta">
                     <li>
-                        <h4>Resorts World Cruises Promotional Flyer</h4>
+                        <h4>Case Study Layout</h4>
                         <small>Print</small>
                     </li>
                     <li>
-                        <p>Flyer</p>
+                        <p>Whitepaper</p>
                         <p></p>
                     </li>
                     <li>
@@ -68,13 +68,14 @@
                 </ul>
                 <div class="ajaxpage__content--description">
                     <h3>Art Direction:</h3>
-                    <p><strong>Objective:</strong> The goal is to create a visually appealing and engaging flyer that captures the essence of a luxurious cruise experience and highlights the exclusive offers and packages available.</p>
-                    <p><strong>Color Scheme:</strong> The primary colors used are white, grey, and pink. The pink color for headings and accents adds vibrancy and draws attention to key elements, while the white and grey background maintains a clean and sophisticated look. These colors are tactically chosen to evoke feelings of relaxation, enjoyment, and exclusivity.</p>
-                    <p><strong>Typography:</strong> The typography is chosen for clarity and readability. Headings are in a larger, bold pink font to stand out, while the body text is in a smaller, softer shade of grey. This combination ensures that the information is easily digestible and visually appealing, strategically guiding the viewer's attention to important details.</p>
-                    <p><strong>Imagery:</strong> High-quality images of the cruise ship and scenic destinations are used to visually entice potential travelers. The images are centered and bordered with a subtle drop shadow to make them stand out without overwhelming the text. The selection of imagery is deliberate to convey the luxurious and picturesque experience of the cruise.</p>
-                    <p><strong>Layout:</strong> The layout is designed to be organized and structured, with clear sections for different types of information. Ample white space is used to prevent clutter and enhance readability. Center alignment of the title and image container helps maintain a balanced and harmonious look. The layout is tactically planned to ensure a seamless flow of information.</p>
-                    <p><strong>Visual Hierarchy:</strong> A clear visual hierarchy is established through the use of font sizes, colors, and spacing. This ensures that the reader's attention is drawn to the most important elements first, such as the cruise packages, special offers, and key descriptions. Strategic use of bold text for headings further guides the reader through the content in a logical and engaging manner, making it easy for them to identify and focus on the main selling points.</p>
-                    <p><strong>Outcome:</strong> The art direction successfully creates an inviting and sophisticated presentation that mirrors the luxurious experience of a Resorts World cruise. The clean and modern design, combined with carefully selected typography, colors, and imagery, makes the flyer not only informative but also visually appealing. The tactical approach ensures that the key messages are effectively communicated, encouraging potential customers to explore the cruise packages and consider booking their next vacation with Resorts World Cruises.</p>
+                    <p><strong>Professional and Engaging:</strong> The design aims to create a professional and engaging look, reflecting the importance and credibility of the case study. The use of sans-serif fonts, such as 'Helvetica Neue,' ensures a clean and modern appearance.</p>
+                    <p><strong>Color Scheme:</strong> The primary colors used are white, grey, and blue. The blue color for headings and accents adds a touch of authority and trustworthiness, while the white and grey background maintains a clean and sophisticated look.</p>
+                    <p><strong>Typography:</strong> The typography is chosen for clarity and readability. Headings are in a larger, bold blue font to stand out, while the body text is in a smaller, subtle shade of grey. This combination ensures that the information is easily digestible and visually appealing.</p>
+                    <p><strong>Layout:</strong> The layout is designed to be organized and structured, with clear sections for different types of information. Ample white space is used to prevent clutter and enhance readability. The use of images in the background adds visual interest and context to the case study.</p>
+                    <p><strong>Imagery:</strong> High-quality images of relevant business-related visuals, such as a container being loaded onto a truck in a port setting or a cargo ship at sea, are used to enhance the cover's visual appeal. The images are centered and bordered with a subtle drop shadow to make them stand out without overwhelming the text.</p>
+                    <p><strong>Visual Hierarchy:</strong> A clear visual hierarchy is established through the use of font sizes, colors, and spacing. This ensures that the reader's attention is drawn to the most important elements first, such as the company name, description, and key headings. Strategic use of bold text for headings further guides the reader through the content in a logical and engaging manner.</p>
+                    <p><strong>Co-branding:</strong> Co-branding elements are incorporated to highlight partnerships and collaborations, adding credibility and reinforcing the case study's authority.</p>
+                    <p><strong>Outcome:</strong> The art direction successfully creates a professional and polished presentation that mirrors the corporate environment of business-to-business companies. The clean and modern design, combined with carefully selected typography, colors, and imagery, makes the case study cover not only informative but also visually appealing, encouraging stakeholders to engage with the content and derive actionable insights.</p>
                 </div>
             </div>
         </section>
