--- a/index.html
+++ b/index.html
@@ -514,7 +514,8 @@
                                         </div>
                                     </div> <img src="projects/print-sime/print-sime-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show print"><a href="#!projects/videos-100" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show video">
+                                <a href="#!projects/videos-100" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
                                             <p>Fitness<br/><span>video</span></p>
                                         </div>
