--- a/index.html
+++ b/index.html
@@ -521,17 +521,18 @@
                                         </div>
                                     </div> <img src="projects/videos-100/videos-100.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show print"><a href="#!projects/print-deltek-inside-zine" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show video">
+                                <a href="#!projects/videos-backtakleen" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>What If<br/><span>print</span></p>
+                                            <p>Infographic<br/><span>video</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/LZxgody.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/videos-backtakleen/videos-backtakleen.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show print"><a href="#!projects/print-deltek-whitepaper" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show print"><a href="#!projects/videos-dialog" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Whitepaper<br/><span>print</span></p>
+                                            <p>Semiconductor<br/><span>video</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/WkmQyCp.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/videos-dialog/videos-dialog.jpg" alt="thumbnail"/> </a>
                             </div>
                             <div class="col-12 col-md-4 project show print"><a href="#!projects/print-letou-gift-box" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
