--- a/projects/videos-dialog/_pgbackup/index_1738544544.html
+++ b/projects/videos-dialog/_pgbackup/index_1738544544.html
@@ -51,13 +51,13 @@
                 <p><small>kate</small></p>
             </div>
         </header>
-        <section id="ajaxpage" class="ajaxpage">
-            <a href="projects/videos-dialog/videos-ql-promo3.mp4" target="_blank"><iframe height="600" src="projects/videos-dialog/videos-fpga1-1080x1920.mp4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen width="100%"></iframe></a>
+        <section id="ajaxpage" class="ajaxpage"><a href="videos-ql-promo3.mp4" target="_blank"><iframe height="600" src="videos-fpga1-1080x1920.mp4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen width="100%"></iframe></a>
             <div class="ajaxpage__content col-10 offset-1 col-md-8 offset-md-2 col-lg-10 offset-lg-1">
                 <ul class="ajaxpage__content--meta">
                     <li>
                         <h4>Semiconductor Ad</h4>
-                        <h4></h4><small>Video</small>
+                        <h4></h4>
+                        <small>Video</small>
                     </li>
                     <li>
                         <p></p>
@@ -71,48 +71,62 @@
                     <p>To create a visually compelling and informative ad for the ForgeFPGA family, emphasizing its ultra-low-power and low-cost features, and highlighting its suitability for low-density, high-volume applications in the semiconductor industry.</p>
                     <h3>Color Scheme</h3>
                     <ul>
-                        <li><strong>Primary Colors:</strong> Black and white. The black color conveys a sense of reliability, innovation, and professionalism, while the white background ensures a clean and crisp look.
+                        <li>
+                            <strong>Primary Colors:</strong> Black and white. The black color conveys a sense of reliability, innovation, and professionalism, while the white background ensures a clean and crisp look.
                         </li>
-                        <li><strong>Accent Colors:</strong> Yellow accents to add a touch of tech sophistication and highlight key elements.
+                        <li>
+                            <strong>Accent Colors:</strong> Yellow accents to add a touch of tech sophistication and highlight key elements.
                         </li>
                     </ul>
                     <h3>Typography</h3>
                     <ul>
-                        <li><strong>Font Style:</strong> Sans-serif fonts like 'Helvetica Neue' for a modern and tech-savvy appearance. The font should be sporty and sharp to convey the technological advancement of the product.
+                        <li>
+                            <strong>Font Style:</strong> Sans-serif fonts like 'Helvetica Neue' for a modern and tech-savvy appearance. The font should be sporty and sharp to convey the technological advancement of the product.
                         </li>
-                        <li><strong>Headings:</strong> Bold and large font size in yellow to make them stand out and grab attention.
+                        <li>
+                            <strong>Headings:</strong> Bold and large font size in yellow to make them stand out and grab attention.
                         </li>
-                        <li><strong>Body Text:</strong> Smaller font size in white for readability and to maintain a professional look. Consistent use of sans-serif fonts ensures uniformity and clarity.
+                        <li>
+                            <strong>Body Text:</strong> Smaller font size in white for readability and to maintain a professional look. Consistent use of sans-serif fonts ensures uniformity and clarity.
                         </li>
                     </ul>
                     <h3>Layout</h3>
                     <ul>
-                        <li><strong>Consistent Structure:</strong> The ad follows a consistent structure to maintain brand cohesion. Clear sections with headings, body text, and images ensure easy navigation.
+                        <li>
+                            <strong>Consistent Structure:</strong> The ad follows a consistent structure to maintain brand cohesion. Clear sections with headings, body text, and images ensure easy navigation.
                         </li>
-                        <li><strong>White Space:</strong> Ample use of white space to prevent clutter and enhance readability. This also helps in creating a clean and professional look.
+                        <li>
+                            <strong>White Space:</strong> Ample use of white space to prevent clutter and enhance readability. This also helps in creating a clean and professional look.
                         </li>
-                        <li><strong>Alignment:</strong> Center alignment for titles and key images to maintain balance and harmony. Left alignment for body text to ensure readability.
+                        <li>
+                            <strong>Alignment:</strong> Center alignment for titles and key images to maintain balance and harmony. Left alignment for body text to ensure readability.
                         </li>
                     </ul>
                     <h3>Imagery</h3>
                     <ul>
-                        <li><strong>High-Quality Images:</strong> Use of high-quality images of semiconductor components, circuit boards, and related icons to visually represent the benefits of the ForgeFPGA family. Images are carefully selected to convey innovation and reliability.
+                        <li>
+                            <strong>High-Quality Images:</strong> Use of high-quality images of semiconductor components, circuit boards, and related icons to visually represent the benefits of the ForgeFPGA family. Images are carefully selected to convey innovation and reliability.
                         </li>
-                        <li><strong>Consistent Style:</strong> Images follow a consistent style and color tone to maintain uniformity across the promotional materials.
+                        <li>
+                            <strong>Consistent Style:</strong> Images follow a consistent style and color tone to maintain uniformity across the promotional materials.
                         </li>
                     </ul>
                     <h3>Visual Hierarchy</h3>
                     <ul>
-                        <li><strong>Font Sizes and Colors:</strong> Use of different font sizes and colors to establish a clear visual hierarchy. Important information like headings and key points are highlighted using larger font sizes and bold colors.
+                        <li>
+                            <strong>Font Sizes and Colors:</strong> Use of different font sizes and colors to establish a clear visual hierarchy. Important information like headings and key points are highlighted using larger font sizes and bold colors.
                         </li>
-                        <li><strong>Bullet Points:</strong> Use of bullet points to list key features and benefits for easy readability and quick reference.
+                        <li>
+                            <strong>Bullet Points:</strong> Use of bullet points to list key features and benefits for easy readability and quick reference.
                         </li>
                     </ul>
                     <h3>Branding</h3>
                     <ul>
-                        <li><strong>Logo Placement:</strong> Prominent placement of the company logo to reinforce brand identity and recognition.
+                        <li>
+                            <strong>Logo Placement:</strong> Prominent placement of the company logo to reinforce brand identity and recognition.
                         </li>
-                        <li><strong>Taglines and Slogans:</strong> Inclusion of taglines and slogans to communicate the brand message effectively and engage the audience.
+                        <li>
+                            <strong>Taglines and Slogans:</strong> Inclusion of taglines and slogans to communicate the brand message effectively and engage the audience.
                         </li>
                     </ul>
                     <h3>Outcome</h3>
